# paradedb

./: Cargo.toml
.github/actions/benchmark-queries/: action.yml
.github/workflows/: antithesis-trigger-test-run.yml  benchmark-pg_search-benchmarks.yml  publish-paradedb-docker.yml  schemabot-generate-diff.yml  test-pg_search-docker.yml  test-pg_search-upgrade.yml
benchmarks/datasets/stackoverflow/create_index/: pg_search.sql
benchmarks/src/: main.rs
docker/: generate-dockerfiles.sh
docs/deploy/self-hosted/: extension.mdx
nix/: pg_search.nix
pg_search/: Cargo.toml
pg_search/sql/: pg_search--0.23.1--0.23.2.sql
pg_search/src/api/tokenizers/: definitions.rs
pg_search/src/index/reader/: index.rs
pg_search/src/postgres/: options.rs  rel.rs  scan.rs  types_arrow.rs  utils.rs
pg_search/src/postgres/customscan/aggregatescan/: mod.rs
pg_search/src/postgres/customscan/basescan/: mod.rs  scan_state.rs
pg_search/src/postgres/customscan/basescan/exec_methods/: top_k.rs
pg_search/src/postgres/customscan/basescan/exec_methods/fast_fields/: columnar.rs
pg_search/src/postgres/customscan/joinscan/: mod.rs  scan_state.rs
pg_search/src/postgres/customscan/mpp/: coordinator.rs  customscan_glue.rs  mod.rs  plan_build.rs  shuffle.rs  stage.rs  transport.rs  walker.rs
pg_search/src/scan/: execution_plan.rs  segmented_topk_exec.rs  table_provider.rs  tests.rs
